package ucf.assignments;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Adan Rodriguez
 */
//import statements.

public class LocalList {
    //declarations for list name and description.

    //Getters for list name and description.

    //Function to display lists in an organized manner on GUI.

}