package ucf.assignments;

/*
 *  UCF COP3330 Fall 2021 Assignment 4 Solution
 *  Copyright 2021 Adan Rodriguez
 *///import statements.

public class LocalTask {
    //Private declarations for task name, due date and description.

    //Getters and setters for task name, due date and description.

    //Function to display the tasks in an organized manner on GUI.

}